--- a/p2d2.h.in
+++ b/p2d2.h.in
@@ -8,4 +8,9 @@
 #define P2D2_VERSION_MAJOR @P2D2_VERSION_MAJOR@
 #define P2D2_MINOR @P2D2_VERSION_MINOR@
 
+#define ERROR_LOAD_CONFIG 1
+#define ERROR_INITIALIZE_WIRINGPI 2
+#define ERROR_INITIALIZE_CONFIG 3
+#define ERROR_INITIALIZE_ROTARY 4
+
 #endif //PUSH2D2_P2D2_H
