--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,12 @@
 cmake_minimum_required(VERSION 3.7)
 
+set(CMAKE_VERBOSE_MAKEFILE ON)
+
 project(P2D2 VERSION 0.1)
 
-configure_file(p2d2.h.in p2d2.h)
+include_directories(src/include)
 
-# main application
-add_executable(p2d2 p2d2.c display.c config.c rotary.c)
+add_subdirectory(src)
+add_subdirectory(test)
 
-# add libraries to link
-target_link_libraries(p2d2 PUBLIC ${EXTRA_LIBS} wiringPi wiringPiDev confuse)
-
-# include folders
-target_include_directories(p2d2 PUBLIC "${PROJECT_BINARY_DIR}")
-
+enable_testing()
