--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,8 @@
 set(CMAKE_VERBOSE_MAKEFILE ON)
 
-configure_file(${PROJECT_SOURCE_DIR}/src/p2d2.h.in ${PROJECT_SOURCE_DIR}/src/p2d2.h)
+configure_file(${PROJECT_SOURCE_DIR}/src/include/p2d2.h.in ${PROJECT_SOURCE_DIR}/src/include/p2d2.h)
 
-add_library(p2d2_lib STATIC display.c config.c rotary.c calc.c)
+add_library(p2d2_lib STATIC display.c config.c rotary.c calc.c protocol.c)
 
 add_executable(p2d2 p2d2.c)
 
