--- a/p2d2.conf
+++ b/p2d2.conf
@@ -1,6 +1,11 @@
+serial {
+    device="/dev/serial0"
+    baud_rate=9600
+}
+
 coordinates {
     latitude=42.78842222
-    longitude=71.20088889
+    longitude=-71.20088889
 }
 
 display {
@@ -20,15 +25,15 @@ display {
 }
 
 rotary azimuth {
-    phase_a_pin=6
-    phase_b_pin=7
+    phase_a_pin=7
+    phase_b_pin=6
     cpr=2400
-    gear_ratio=1
+    gear_ratio=20
 }
 
 rotary altitude {
     phase_a_pin=8
     phase_b_pin=9
     cpr=2400
-    gear_ratio=1
+    gear_ratio=20
 }
