--- a/src/include/p2d2.h.in
+++ b/src/include/p2d2.h.in
@@ -12,5 +12,7 @@
 #define ERROR_INITIALIZE_WIRINGPI 2
 #define ERROR_INITIALIZE_CONFIG 3
 #define ERROR_INITIALIZE_ROTARY 4
+#define ERROR_INITIALIZE_SERIAL 6
+#define ERROR_INITIALIZE_PROTOCOL 7
 
 #endif //PUSH2D2_P2D2_H
