--- a/p2d2.conf
+++ b/p2d2.conf
@@ -1,9 +1,9 @@
-serial {
+serial_config {
     device="/dev/serial0"
     baud_rate=9600
 }
 
-coordinates {
+coordinates_config {
     latitude=42.78842222
     longitude=-71.20088889
 }
